--- a/package.json
+++ b/package.json
@@ -3,10 +3,39 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "private": true,
+  "author": {
+    "name": "Paweł Krystkiewicz",
+    "email": "pawelkrystkiewicz@outlook.com"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "next dev",
+    "build": "next build",
+    "preview": "next start",
+    "lint": "next lint",
+    "nuke": "rm -rf node_modules yarn.lock"
+  },
+  "dependencies": {
+    "@types/node": "18.11.10",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "framer-motion": "^7.6.18",
+    "next": "13.0.6",
+    "next-transpile-modules": "^10.0.0",
+    "nextra": "^2.0.1",
+    "nextra-theme-docs": "^2.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.56.1",
+    "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
