--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 
 # production
 /build
+/dist
+*/dist
 
 # misc
 .DS_Store
@@ -41,3 +43,7 @@ next-env.d.ts
 .yarn/*
 
 .pnp.*
+#packages
+packages/*/node_modules
+packages/*/dist
+packages/*/build
