--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build": "next build",
     "preview": "next start",
     "lint": "next lint",
-    "nuke": "rm -rf node_modules yarn.lock"
+    "nuke": "rm -rf node_modules yarn.lock",
+    "sitemap": "next-sitemap",
+    "build:react": "pnpm --filter ./packages/creation-ui-react build",
+    "export": "next export"
   },
   "dependencies": {
     "@types/node": "18.11.10",
@@ -21,9 +24,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "framer-motion": "^7.6.18",
     "next": "13.0.6",
-    "next-transpile-modules": "^10.0.0",
     "nextra": "^2.0.1",
     "nextra-theme-docs": "^2.0.1",
     "react": "18.2.0",
