--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
 # testing
@@ -13,9 +13,8 @@
 /out/
 
 # production
-/build
-/dist
-*/dist
+build/
+dist/
 
 # misc
 .DS_Store
@@ -43,7 +42,4 @@ next-env.d.ts
 .yarn/*
 
 .pnp.*
-#packages
-packages/*/node_modules
-packages/*/dist
-packages/*/build
+packages/creation-ui-react/src/components/core/node_modules/
