--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.56.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "framer-motion": "^8.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
