--- a/packages/creation-ui-react/tsconfig.json
+++ b/packages/creation-ui-react/tsconfig.json
@@ -26,23 +26,9 @@
     "declarationMap": true,
     "baseUrl": ".",
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/../../types"
     ],
     "rootDir": ".",
-    "paths": {
-      "@components": ["./src/components/"],
-      "@components/*": ["./src/components/*"],
-      "@types": ["./src/types/"],
-      "@types/*": ["./src/types/*"],
-      "@theme": ["./src/theme/"],
-      "@theme/*": ["./src/theme/*"],
-      "@hooks": ["./src/hooks/"],
-      "@hooks/*": ["./src/hooks/*"],
-      "@styles": ["./src/styles/"],
-      "@styles/*": ["./src/styles/*"],
-      "@utils": ["./src/utils/"],
-      "@utils/*": ["./src/utils/*"]
-    }
   },
   "exclude": [
     "node_modules",
