--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -24,17 +24,23 @@
     "tailwind-merge": "^1.5.1",
     "class-variance-authority": "^0.4.0",
     "@headlessui/react": "^1.7.7",
+    "@headlessui/tailwindcss": "^0.1.2",
     "uuid": "^9.0.0",
     "react-datepicker": "^4.8.0",
     "@tanstack/table-core": "^8.7.4",
     "@tanstack/react-table": "^8.7.4",
     "@tanstack/match-sorter-utils": "^8.7.2",
     "react-spring": "^9.6.1",
-    "react-stick": "^5.0.3"
+    "react-stick": "^5.0.3",
+    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
-    "react-dom": "^16 || ^17 || ^18"
+    "react-dom": "^16 || ^17 || ^18",
+    "tailwindcss": "^3.0"
   },
   "devDependencies": {
     "deepmerge": "^4.2.2",
