--- a/package.json
+++ b/package.json
@@ -26,19 +26,23 @@
     "clsx": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "framer-motion": "^8.0.2",
     "next": "13.0.6",
     "nextra": "^2.0.1",
     "nextra-theme-docs": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.5",
     "sass": "^1.56.1",
-    "typescript": "4.9.3",
-    "framer-motion": "^8.0.2"
+    "typescript": "4.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "style-loader": "^3.3.1",
+    "css-loader": "^6.5.1",
+    "postcss-loader": "^6.2.0"
   },
   "keywords": [],
   "license": "MIT"
