--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -58,7 +58,8 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/react-datepicker": "^4.8.0"
   },
   "keywords": [
     "javascript",
