fix: next build error

--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -16,7 +16,9 @@
     "copy": "cp ./package.json ./build && cp ./README.md ./build && cp ./LICENSE ./build",
     "build": "pnpm build:cjs && pnpm build:dts && pnpm copy",
     "lint:check": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
-    "prettier:check": "prettier -c ."
+    "prettier:check": "prettier -c .",
+    "prettify": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+    "_publish": "npm publish --registry https://registry.npmjs.org --access public"
   },
   "dependencies": {
     "clsx": "latest",
