--- a/packages/creation-ui-react/tsconfig.json
+++ b/packages/creation-ui-react/tsconfig.json
@@ -1,13 +1,7 @@
 {
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
-    "lib": [
-      "ES2021",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2021", "DOM", "DOM.Iterable"],
     "incremental": false,
     "isolatedModules": true,
     "allowJs": true,
@@ -25,13 +19,8 @@
     "outDir": "build",
     "declarationMap": true,
     "baseUrl": ".",
-    "typeRoots": [
-      "./node_modules/../../types"
-    ],
-    "rootDir": ".",
+    "typeRoots": ["./node_modules/../../types"],
+    "rootDir": "."
   },
-  "exclude": [
-    "node_modules",
-    "build"
-  ]
+  "exclude": ["node_modules", "build"]
 }
