--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -18,7 +18,7 @@
     "lint:check": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
     "prettier:check": "prettier -c .",
     "prettify": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-    "_publish": "npm publish --registry https://registry.npmjs.org --access public"
+    "_publish": "pnpm publish --registry https://registry.npmjs.org --access public"
   },
   "dependencies": {
     "clsx": "latest",
