--- a/packages/creation-ui-react/tsconfig.json
+++ b/packages/creation-ui-react/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["ES2021", "DOM", "DOM.Iterable"],
     "incremental": false,
     "isolatedModules": true,
+    "importsNotUsedAsValues": "error",
     "allowJs": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -19,8 +20,6 @@
     "outDir": "build",
     "declarationMap": true,
     "baseUrl": ".",
-    "typeRoots": ["./node_modules/../../types"],
-    "rootDir": "."
-  },
-  "exclude": ["node_modules", "build"]
+    "typeRoots": ["./node_modules/@types"]
+  }
 }
