--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@creation-ui/react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "private": true,
@@ -17,6 +17,7 @@
     "sitemap": "next-sitemap",
     "package:build": "pnpm --filter ./packages/creation-ui-react build",
     "package:publish": "pnpm --filter ./packages/creation-ui-react _publish",
+    "package": "pnpm package:build && pnpm package:publish",
     "export": "next export"
   },
   "dependencies": {
