--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@creation-ui/react",
   "homepage": "https://creation-ui.com",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "@creation-ui/react is an easy-to-use components library for ReactJS & Tailwind CSS.",
   "repository": "https://github.com/creativetimofficial/creation-ui",
   "license": "MIT",
-  "main": "index.js",
-  "typings": "index.d.ts",
+  "main": "build/index.js",
+  "typings": "build/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
