--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@creation-ui/react",
   "homepage": "https://creation-ui.com",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "@creation-ui/react is an easy-to-use components library for ReactJS & Tailwind CSS.",
   "repository": "https://github.com/creativetimofficial/creation-ui",
   "license": "MIT",
@@ -24,23 +24,23 @@
     "_publish": "npm publish --registry https://registry.npmjs.org --access public"
   },
   "dependencies": {
-    "clsx": "latest",
-    "downshift": "^6.1.7",
-    "tailwind-merge": "^1.5.1",
-    "class-variance-authority": "^0.4.0",
     "@headlessui/react": "^1.7.7",
     "@headlessui/tailwindcss": "^0.1.2",
-    "uuid": "^9.0.0",
-    "react-datepicker": "^4.8.0",
-    "@tanstack/table-core": "^8.7.4",
-    "@tanstack/react-table": "^8.7.4",
-    "@tanstack/match-sorter-utils": "^8.7.2",
-    "react-spring": "^9.6.1",
-    "react-stick": "^5.0.3",
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "@tailwindcss/typography": "^0.5.8",
+    "@tanstack/match-sorter-utils": "^8.7.2",
+    "@tanstack/react-table": "^8.7.4",
+    "@tanstack/table-core": "^8.7.4",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "latest",
+    "downshift": "^6.1.7",
+    "react-datepicker": "^4.8.0",
+    "react-spring": "^9.6.1",
+    "react-stick": "^5.0.3",
+    "tailwind-merge": "^1.5.1",
+    "uuid": "^9.0.0"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
@@ -48,23 +48,23 @@
     "tailwindcss": "^3.0"
   },
   "devDependencies": {
-    "deepmerge": "^4.2.2",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.224",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "deepmerge": "^4.2.2",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "@types/react-datepicker": "^4.8.0"
+    "prettier": "^2.8.2",
+    "typescript": "^4.7.4"
   },
   "keywords": [
     "javascript",
