--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.2",
+    "styled-components": "^5.3.6",
     "typescript": "^4.7.4"
   },
   "keywords": [
