--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@creation-ui/react",
   "homepage": "https://creation-ui.com",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "@creation-ui/react is an easy-to-use components library for ReactJS & Tailwind CSS.",
   "repository": "https://github.com/creativetimofficial/creation-ui",
   "license": "MIT",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.224",
+    "@swc/plugin-styled-components": "^1.5.36",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-datepicker": "^4.8.0",
