--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.224",
-    "@swc/plugin-styled-components": "^1.5.36",
+    "@swc/css": "^0.0.18",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-datepicker": "^4.8.0",
@@ -65,7 +65,6 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.2",
-    "styled-components": "^5.3.6",
     "typescript": "^4.7.4"
   },
   "keywords": [
