--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
@@ -34,6 +35,7 @@
     "next": "13.0.6",
     "nextra": "^2.0.1",
     "nextra-theme-docs": "^2.0.1",
+    "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-timer-hook": "^3.0.5",
