--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@next/eslint-plugin-next": "^13.1.6",
     "autoprefixer": "^10.4.13",
     "css-loader": "^6.5.1",
     "deep-merge": "^1.0.0",
