--- a/package.json
+++ b/package.json
@@ -40,19 +40,65 @@
     "react-dom": "18.2.0",
     "react-timer-hook": "^3.0.5",
     "sass": "^1.56.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "@headlessui/react": "^1.7.7",
+    "@headlessui/tailwindcss": "^0.1.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "@tanstack/match-sorter-utils": "^8.7.2",
+    "@tanstack/react-table": "^8.7.4",
+    "@tanstack/table-core": "^8.7.4",
+    "downshift": "^7.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-spring": "^9.6.1",
+    "react-stick": "^5.0.3",
+    "tailwind-merge": "^1.5.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.28",
+    "@swc/css": "^0.0.20",
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.27",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "autoprefixer": "^10.4.13",
+    "deepmerge": "^4.2.2",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "rollup": "^3.10.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-progress": "^1.1.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "typescript": "^4.9.4",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@next/eslint-plugin-next": "^13.1.6",
-    "autoprefixer": "^10.4.13",
     "css-loader": "^6.5.1",
     "deep-merge": "^1.0.0",
-    "deepmerge": "^4.2.2",
-    "postcss": "^8.4.19",
     "postcss-loader": "^6.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.4"
