chore: clean up

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "email": "pawelkrystkiewicz@outlook.com"
   },
   "scripts": {
-    "start": "next dev",
-    "build": "next build",
+    "start": "next",
+    "build": "NODE_OPTIONS='--stack-trace-limit=10000' next build",
     "preview": "next start",
     "lint": "next lint",
-    "nuke": "rm -rf node_modules yarn.lock",
+    "nuke": "rm -rf node_modules yarn.lock pnpm-lock.yaml .next && pnpm install",
     "sitemap": "next-sitemap",
     "package:build": "pnpm --filter ./packages/creation-ui-react build",
     "package:publish": "pnpm --filter ./packages/creation-ui-react _publish",
@@ -32,9 +32,9 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^8.0.2",
-    "next": "13.0.6",
-    "nextra": "^2.0.1",
-    "nextra-theme-docs": "^2.0.1",
+    "next": "13.1.6",
+    "nextra": "^2.2.14",
+    "nextra-theme-docs": "^2.2.14",
     "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
