--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
         "./components/*"
       ],
       "@components": [
-        "./components"
+        "./components/"
       ],
       "@creation-ui/react/*": [
         "./packages/creation-ui-react/src/*"
@@ -43,13 +43,19 @@
         "./components/examples/*"
       ],
       "@examples": [
-        "./components/examples"
+        "./components/examples/"
       ],
       "@pages/*": [
         "pages/*"
       ],
       "@pages": [
         "pages"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ],
+      "@utils": [
+        "utils"
       ],
       "@models/*": [
         "./models/*"
