--- a/package.json
+++ b/package.json
@@ -21,14 +21,25 @@
     "export": "next export"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@headlessui/react": "^1.7.7",
+    "@headlessui/tailwindcss": "^0.1.2",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "@tanstack/match-sorter-utils": "^8.7.6",
+    "@tanstack/react-table": "^8.7.9",
+    "@tanstack/table-core": "^8.7.9",
     "@types/mdx": "^2.0.3",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "downshift": "^7.2.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^8.0.2",
@@ -37,28 +48,22 @@
     "nextra-theme-docs": "^2.2.14",
     "prettier": "^2.8.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-timer-hook": "^3.0.5",
-    "sass": "^1.56.1",
-    "typescript": "4.9.3",
-    "@headlessui/react": "^1.7.7",
-    "@headlessui/tailwindcss": "^0.1.2",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "@tanstack/match-sorter-utils": "^8.7.2",
-    "@tanstack/react-table": "^8.7.4",
-    "@tanstack/table-core": "^8.7.4",
-    "downshift": "^7.2.0",
     "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
     "react-spring": "^9.6.1",
     "react-stick": "^5.0.3",
+    "react-timer-hook": "^3.0.5",
+    "sass": "^1.56.1",
     "tailwind-merge": "^1.5.1",
+    "typescript": "4.9.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@next/eslint-plugin-next": "^13.1.6",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
@@ -72,6 +77,8 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
+    "css-loader": "^6.5.1",
+    "deep-merge": "^1.0.0",
     "deepmerge": "^4.2.2",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
@@ -80,6 +87,7 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
+    "postcss-loader": "^6.2.0",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "rollup": "^3.10.1",
@@ -92,16 +100,9 @@
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
-    "typescript": "^4.9.4",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@next/eslint-plugin-next": "^13.1.6",
-    "css-loader": "^6.5.1",
-    "deep-merge": "^1.0.0",
-    "postcss-loader": "^6.2.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   },
   "keywords": [],
   "license": "MIT"
