--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@changesets/cli": "^2.26.0",
     "@next/eslint-plugin-next": "^13.1.6",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
