--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "package:build": "pnpm --filter ./packages/creation-ui-react build",
     "package:publish": "pnpm --filter ./packages/creation-ui-react _publish",
     "package": "pnpm package:build && pnpm package:publish",
-    "export": "next export"
+    "export": "next export",
+    "ci:publish": "pnpm publish -r"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
