--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -23,7 +23,8 @@
     "build:dts": "tsc --declaration --declarationMap --emitDeclarationOnly",
     "build:version": "echo $(cat ./build/package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')",
     "build:rollup": "yarn build:version && yarn tsc && yarn build:rm && rollup -c",
-    "build:rm": "rm -rf build"
+    "build:rm": "rm -rf build",
+    "ci:publish": "pnpm publish -r"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
