--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -24,7 +24,9 @@
     "build:version": "echo $(cat ./build/package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')",
     "build:rollup": "yarn build:version && yarn tsc && yarn build:rm && rollup -c",
     "build:rm": "rm -rf build",
-    "ci:publish": "pnpm publish -r"
+    "ci:publish": "pnpm publish -r",
+    "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
+
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
