--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^8.0.2",
+    "lodash": "^4.17.21",
     "next": "13.1.6",
     "nextra": "^2.2.14",
     "nextra-theme-docs": "^2.2.14",
