--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "package:version": "pnpm --filter ./packages/creation-ui-react ci:version",
     "package:build": "pnpm --filter ./packages/creation-ui-react build",
     "package:publish": "pnpm --filter ./packages/creation-ui-react _publish",
-    "package": "pnpm package:build && pnpm package:publish",
+    "package": "pnpm package:version && pnpm package:build && pnpm package:publish",
     "export": "next export",
     "ci:publish": "pnpm publish -r",
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
