--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -28,22 +28,25 @@
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
+    "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/match-sorter-utils": "^8.7.6",
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/table-core": "^8.7.9",
     "class-variance-authority": "^0.4.0",
-    "clsx": "latest",
-    "downshift": "^7.2.0",
-    "react-datepicker": "^4.8.0",
-    "react-spring": "^9.6.1",
+    "clsx": "^1.2.1",
+    "downshift": "^7.6.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
+    "react-dom": "^18.2.0",
+    "react-spring": "^9.7.1",
     "react-stick": "^5.0.3",
-    "tailwind-merge": "^1.5.1",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss": "^3.2.7",
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
@@ -52,41 +55,41 @@
     "tailwindcss": "^3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@rollup/plugin-commonjs": "^24.0.0",
+    "@babel/core": "^7.21.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.28",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42",
     "@swc/css": "^0.0.20",
-    "@types/node": "^18.6.1",
-    "@types/react": "^18.0.27",
-    "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "autoprefixer": "^10.4.13",
-    "deepmerge": "^4.2.2",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/node": "^18.15.5",
+    "@types/react": "^18.0.28",
+    "@types/react-datepicker": "^4.10.0",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "autoprefixer": "^10.4.14",
+    "deepmerge": "^4.3.1",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "rollup": "^3.10.1",
-    "rollup-plugin-babel": "^4.4.0",
+    "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.5",
+    "rollup": "^3.20.0",
+    "@rollup/plugin-babel": "^6.0.3",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "rollup-plugin-visualizer": "^5.9.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "javascript",
