--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "next",
-    "build": "next build",
+    "build": "pnpm import-cycle-check && next build",
     "preview": "next start",
     "lint": "next lint",
     "nuke": "rm -rf node_modules yarn.lock pnpm-lock.yaml .next && pnpm install",
@@ -22,7 +22,9 @@
     "export": "next export",
     "ci:publish": "pnpm publish -r",
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)",
-    "amend": "git commit --amend --no-edit"
+    "amend": "git commit --amend --no-edit",
+    "import-check": "npx unimported",
+    "import-cycle-check": "npx cycle-import-check"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
