--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "email": "pawelkrystkiewicz@outlook.com"
   },
   "scripts": {
-    "start": "next",
+    "start": "npx kill-port 3000 && next",
     "build": "pnpm import-check && next build",
     "preview": "next start",
     "lint": "next lint",
@@ -54,6 +54,8 @@
     "nextra-theme-docs": "^2.2.19",
     "prettier": "^2.8.6",
     "react": "18.2.0",
+    "react-code-blocks": "0.0.9-0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.7.1",
