--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-timer-hook": "^3.0.5",
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0",
+    "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "4.9.3",
     "uuid": "^9.0.0"
   },
