feat(github-actions): :zap: github action for creating auto PRs to master from develop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,4 +10,7 @@
   },
   "git.ignoreLimitWarning": true,
   "typescript.tsdk": "node_modules/typescript/lib",
+  "conventionalCommits.scopes": [
+    "github-actions"
+  ],
 }
