fix: another try

--- a/.github/workflows/develop-to-master.yml
+++ b/.github/workflows/develop-to-master.yml
@@ -53,10 +53,12 @@ jobs:
         uses: octokit/request-action@v2.x
         id: create_pr
         with:
-          request: |
-            POST /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/pulls
-            Content-Type: application/json
-            Accept: application/vnd.github.shadow-cat-preview+json
-          body: '{"title": "chore: merge develop into master", "body": "This PR merges the latest changes from the develop branch into the master branch.", "head": "develop", "base": "master"}'
+          route: POST /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/pulls
+          mediaType: '{"previews": ["shadow-cat"]}'
+          title: 'chore: merge develop into master'
+          body: 'This PR merges the latest changes from the develop branch into the master branch.'
+          head: 'develop'
+          base: 'master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
