--- a/.github/workflows/develop-to-master.yml
+++ b/.github/workflows/develop-to-master.yml
@@ -50,15 +50,7 @@ jobs:
 
       - name: Create PR from develop to master
         if: steps.check_pr.outputs.pr_exists == '0'
-        uses: octokit/request-action@v2.x
-        id: create_pr
-        with:
-          route: POST /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/pulls
-          mediaType: '{"previews": ["shadow-cat"]}'
-          title: 'chore: merge develop into master'
-          body: 'This PR merges the latest changes from the develop branch into the master branch.'
-          head: 'develop'
-          base: 'master'
+        run: |
+          gh pr create --base master --head develop --title "chore: merge develop into master" --body "This PR merges the latest changes from the develop branch into the master branch." --repo ${{ github.repository }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
