chore: add tests stub and remove deepmerge

--- a/packages/creation-ui-react/tsconfig.json
+++ b/packages/creation-ui-react/tsconfig.json
@@ -31,6 +31,10 @@
   },
   "exclude": [
     "node_modules",
-    "build"
+    "build",
+    "**/tests",
+    "**/*.cy.tsx",
+    "**/*.spec.tsx",
+    "**/*.test.tsx",
   ]
 }
