--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "nuke": "rm -rf node_modules yarn.lock pnpm-lock.yaml .next && pnpm install",
     "sitemap": "next-sitemap",
     "package:version": "pnpm --filter ./packages/creation-ui-react ci:version",
-    "package:build": "pnpm --filter ./packages/creation-ui-react build",
+    "package:build": "pnpm rm:build && pnpm --filter ./packages/creation-ui-react build",
     "package:publish": "pnpm --filter ./packages/creation-ui-react _publish",
     "package": "pnpm package:version && pnpm package:build && pnpm package:publish",
     "export": "next export",
     "ci:publish": "pnpm publish -r",
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)",
     "amend": "git commit --amend --no-edit",
-    "import-check": "npx cycle-import-check"
+    "import-check": "npx cycle-import-check",
+    "rm:build": "rm -rf ./packages/creation-ui-react/build",
+    "e2e": "pnpm package:build && cypress run",
+    "e2e:dev": "pnpm package:build && cypress open"
   },
   "dependencies": {
     "@babel/parser": "^7.21.4",
@@ -45,6 +48,7 @@
     "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "cypress": "^12.9.0",
     "downshift": "^7.6.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
@@ -90,7 +94,6 @@
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.7.3",
     "deep-merge": "^1.0.0",
-    "deepmerge": "^4.3.1",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
