--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -47,7 +47,9 @@
     "react-stick": "^5.0.3",
     "tailwind-merge": "^1.10.0",
     "tailwindcss": "^3.2.7",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.values": "^4.3.0"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
@@ -66,6 +68,8 @@
     "@types/react": "^18.0.28",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
+    "@types/lodash.merge": "^4.6.7",
+    "@types/lodash.values": "^4.3.7",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
