--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "rm:build": "rm -rf ./packages/creation-ui-react/build",
     "e2e": "pnpm package:build && cypress run",
     "e2e:dev": "pnpm package:build && cypress open",
-    "version":"sh ./override-version.sh"
+    "override-version":"sh ./override-version.sh"
   },
   "dependencies": {
     "@babel/parser": "^7.21.4",
