--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - name: Setupt Node.js 16.x
+      - name: Setup Node.js 16.x
         uses: actions/setup-node@v3
         with:
           node-version: 16
