--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
     "@babel/preset-typescript": "^7.21.0",
     "@changesets/cli": "^2.26.1",
     "@next/eslint-plugin-next": "^13.2.4",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.42",
@@ -105,14 +107,12 @@
     "postcss-loader": "^7.1.0",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "rollup": "^3.20.0",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "style-loader": "^3.3.2",
     "tailwindcss": "^3.2.7",
