chore: remove yarn & yarn.lock

--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -16,13 +16,13 @@
     "prettier:check": "prettier -c .",
     "prettify": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
     "_publish": "cd build && npm publish --registry https://registry.npmjs.org --access public",
-    "release": "yarn build && yarn _publish",
+    "release": "pnpm build && pnpm _publish",
     "amend": "git commit --amend --no-edit",
-    "build": "yarn build:rm && yarn build:cjs && yarn build:dts && yarn copy && yarn build:version",
+    "build": "pnpm build:rm && pnpm build:cjs && pnpm build:dts && pnpm copy && pnpm build:version",
     "build:cjs": "swc ./src -d ./build --only ./src/**/*.ts --config-file .swcrc",
     "build:dts": "tsc --declaration --declarationMap --emitDeclarationOnly",
     "build:version": "echo $(cat ./build/package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')",
-    "build:rollup": "yarn build:version && yarn tsc && yarn build:rm && rollup -c",
+    "build:rollup": "pnpm build:version && pnpm tsc && pnpm build:rm && rollup -c",
     "build:rm": "rm -rf build",
     "ci:publish": "pnpm publish -r",
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
