fix: clean up type errors and build errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -83,7 +83,7 @@
     "theme.config.tsx",
     "pages/index.tsx",
     ".next/types/**/*.ts"
-  ],
+, "pages/_app.msx"  ],
   "exclude": [
     "node_modules",
     "**/build",
