--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@babel/parser": "^7.21.4",
+    "@floating-ui/react": "^0.23.1",
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
     "@mdi/js": "^7.2.96",
