--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cypress": "^12.9.0",
-    "downshift": "^7.6.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^10.8.4",
     "lodash": "^4.17.21",
+    "lodash.merge": "^4.6.2",
     "lodash.values": "^4.3.0",
     "next": "13.3.1",
     "nextra": "^2.4.2",
