--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "lodash.values": "^4.3.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "13.3.1",
     "nextra": "^2.4.2",
     "nextra-theme-docs": "^2.4.2",
