--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "arrowParens": "avoid",
-  "printWidth": 80,
-  "jsxSingleQuote": true
+    "semi": false,
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "printWidth": 80,
+    "jsxSingleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "bracketSpacing": true
 }
