--- a/packages/creation-ui-react/package.json
+++ b/packages/creation-ui-react/package.json
@@ -39,8 +39,9 @@
     "lodash.merge": "^4.6.2",
     "lodash.values": "^4.3.0",
     "mini-svg-data-uri": "^1.4.4",
-    "react": "link:@types/@floating-ui/react",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-spring": "^9.7.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
