--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "generate:docs": "node ./scripts/generate-docs.js"
   },
   "dependencies": {
+    "keyboard-key": "^1.1.0",
     "@babel/parser": "^7.21.4",
     "@floating-ui/react": "^0.23.1",
     "@headlessui/react": "^1.7.13",
