fix: tsc, prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,10 +27,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".tsx"
-        ]
+        "extensions": [".js", ".tsx"]
       }
     ],
     "react/require-default-props": "off",
@@ -44,10 +41,7 @@
     },
     "import/resolver": {
       "node": {
-        "moduleDirectory": [
-          "node_modules",
-          "src/"
-        ]
+        "moduleDirectory": ["node_modules", "src/"]
       }
     }
   },
