--- a/packages/creation-ui-react/tsconfig.json
+++ b/packages/creation-ui-react/tsconfig.json
@@ -1,13 +1,7 @@
 {
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
-    "lib": [
-      "ES2021",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2021", "DOM", "DOM.Iterable"],
     "incremental": false,
     "isolatedModules": true,
     "allowJs": true,
@@ -25,9 +19,7 @@
     "outDir": "build",
     "declarationMap": true,
     "baseUrl": ".",
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["./node_modules/@types"]
   },
   "exclude": [
     "node_modules",
@@ -35,6 +27,6 @@
     "**/tests",
     "**/*.cy.tsx",
     "**/*.spec.tsx",
-    "**/*.test.tsx",
+    "**/*.test.tsx"
   ]
 }
