--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,56 +15,24 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": [
-      "react/next",
-      "react-dom/next",
-      "mdx"
-    ],
+    "types": ["react/next", "react-dom/next", "mdx"],
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@components/*": [
-        "./components/*"
-      ],
-      "@components": [
-        "./components/"
-      ],
-      "@creation-ui/react/*": [
-        "./packages/creation-ui-react/src/*"
-      ],
-      "@creation-ui/react": [
-        "./packages/creation-ui-react/src"
-      ],
-      "@examples/*": [
-        "./components/examples/*"
-      ],
-      "@examples": [
-        "./components/examples/"
-      ],
-      "@pages/*": [
-        "pages/*"
-      ],
-      "@pages": [
-        "pages"
-      ],
-      "@utils/*": [
-        "utils/*"
-      ],
-      "@utils": [
-        "utils"
-      ],
-      "@models/*": [
-        "./models/*"
-      ],
-      "@models": [
-        "./models"
-      ],
-      "@root/*": [
-        "./*"
-      ],
-      "@root": [
-        "./"
-      ],
+      "@components/*": ["./components/*"],
+      "@components": ["./components/"],
+      "@creation-ui/react/*": ["./packages/creation-ui-react/src/*"],
+      "@creation-ui/react": ["./packages/creation-ui-react/src"],
+      "@examples/*": ["./components/examples/*"],
+      "@examples": ["./components/examples/"],
+      "@pages/*": ["pages/*"],
+      "@pages": ["pages"],
+      "@utils/*": ["utils/*"],
+      "@utils": ["utils"],
+      "@models/*": ["./models/*"],
+      "@models": ["./models"],
+      "@root/*": ["./*"],
+      "@root": ["./"]
     },
     "plugins": [
       {
@@ -82,11 +46,9 @@
     "**/*.tsx",
     "theme.config.tsx",
     "pages/index.tsx",
-    ".next/types/**/*.ts"
-, "pages/_app.msx", "scripts/generate-docs.js"  ],
-  "exclude": [
-    "node_modules",
-    "**/build",
-    "cypress"
-  ]
+    ".next/types/**/*.ts",
+    "pages/_app.msx",
+    "scripts/generate-docs.js"
+  ],
+  "exclude": ["node_modules", "**/build", "cypress"]
 }
