--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,6 +28,7 @@
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
   },
   "dependencies": {
+    "@creation-ui/core": "latest",
     "@floating-ui/react": "^0.25.1",
     "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
@@ -50,6 +51,7 @@
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
+    "@creation-ui/core": "latest",
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
     "tailwindcss": "^3.0"
