--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,7 +1,13 @@
 {
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
-    "lib": ["ES2021", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2021",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "incremental": false,
     "isolatedModules": true,
     "allowJs": true,
@@ -19,11 +25,9 @@
     "outDir": "build",
     "declarationMap": true,
     "baseUrl": ".",
-    "typeRoots": ["./node_modules/@types"],
-    "paths":{
-      "@creation-ui/core/*": ["../core/src/*"],
-      "@creation-ui/core": ["../core/src"],
-    }
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
   },
   "exclude": [
     "node_modules",
