chore: align types to core

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,10 +25,11 @@
     "build:rollup": "pnpm build:version && pnpm tsc && pnpm build:rm && rollup -c",
     "build:rm": "rm -rf build",
     "ci:publish": "pnpm publish -r",
-    "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)"
+    "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)",
+    "core": "pnpm i @creation-ui/core@latest"
   },
   "dependencies": {
-    "@creation-ui/core": "latest",
+    "@creation-ui/core": "^0.4.5",
     "@floating-ui/react": "^0.25.1",
     "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
