--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "e2e:dev": "pnpm package:build && cypress open",
     "override-version": "sh ./override-version.sh",
     "generate:docs": "node ./scripts/generate-docs.js",
-    "prettify": "prettier --write ."
+    "prettify": "prettier --write .",
+    "core": "pnpm -r add @creation-ui/core@latest"
   },
   "dependencies": {
-    "@creation-ui/core": "latest",
-    "keyboard-key": "^1.1.0",
     "@babel/parser": "^7.21.4",
+    "@creation-ui/core": "^0.4.5",
     "@floating-ui/react": "^0.25.1",
     "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
@@ -57,6 +57,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^10.8.4",
+    "keyboard-key": "^1.1.0",
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "lodash.values": "^4.3.0",
