--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,11 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
-        id: release
+      - uses: actions/checkout@v2
+
+      - name: Release Please
+        uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
           package-name: release-please-action
+          token: ${{ secrets.PAT }}
