--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "package:build": "pnpm rm:build && pnpm --filter ./packages/react build",
     "package:publish": "pnpm --filter ./packages/react _publish",
     "package": "pnpm package:version && pnpm package:build && pnpm test && pnpm package:publish",
+    "package:auto": "pnpm package:build && pnpm test && pnpm package:publish",
     "export": "next export",
     "ci:publish": "pnpm publish -r",
     "ci:version": "git fetch --tags && npm version $(git describe --abbrev=0 --tags)",
